--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,28 @@
         <dependency>
             <groupId>osmosis</groupId>
             <artifactId>discord-bot-api</artifactId>
-            <version>1.0</version>
+            <version>1.1</version>
             <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>osmosis</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>osmosis</groupId>
+            <artifactId>filters</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>osmosis</groupId>
+            <artifactId>appliers</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>osmosis</groupId>
+            <artifactId>pipes</artifactId>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 
